# gradescope-autograding-lib

./: .dockerignore  .gitignore  Makefile  README.md  __init__.py  grade.py  json.py  results.py  setup.cfg  visibility.py
docker/: Dockerfile  Makefile  README.md
docs/: Image_Management.md  Intro.md
docs/src/: Image_Workflow.monopic
src/gradescope/: __init__.py  assignment.py  grade.py  leaderboard.py  metadata.py  paths.py  results.py  submission.py  testcaseabc.py  tester.py  user.py
src/gradescope/context/: __init__.py  chdir.py  list.py
src/gradescope/file_util/: __init__.py  chdir.py  instructor_files.py  manifest.py
src/gradescope/group/: __init__.py  group.py
src/gradescope/leaderboard/: __init__.py  abc.py  functions.py  orders.py
src/gradescope/prereq/: __init__.py  abc.py  error.py  functions.py
src/gradescope/results/: __init__.py  leaderboard.py  results.py
src/gradescope/testcase/: __init__.py  abc.py  functions.py  group.py
src/gradescope/tester/: __init__.py  tester.py
src/gradescope/unix_util/: __init__.py  executable.py  (+1 more)
tests/: run_test  run_tests
tests/.docker/: centos.Dockerfile  ubuntu-1804.Dockerfile  ubuntu-2004.Dockerfile
tests/autograder/: example_metadata.json  results.json
tests/test1/: __init__.py  submission_metadata.json
tests/test2/: __init__.py
tests/test3/: submission_metadata.json
tests/test4/: __init__.py
tests/test5/: __init__.py
tests/test6/: __init__.py
tests/test7/: __init__.py
tests/test8/: __init__.py  submission_metadata.json
tests/test9/: __init__.py  submission_metadata.json
(+4 files in other folders)
