[metadata]
name = gradescope-autograding-lib
version = 0.8.2
author = Tariq Sachleben
author_email = t.sachleben@northeastern.edu
description = 
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/northeastern-khoury/gradescope-autograding-lib
classifiers =
    Programming Language :: Python :: 3
    License :: Private
    Operating System :: Linux

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.7.0
[options.packages.find]
where = src
